# TBMTJ

./: CMakeLists.txt  README.md  build.sh  tbgui.pro
examples/: Fe_MgO_Fe.tb  Fe_MgO_Fe.xml  Fe_MgO_Fe.xml~
res/: PlotApp.py  PlotApp.py~  TBApp.py  test.py
res/drawable/: 3L.tiff
src/: CMakeLists.txt  QMakeLists.pro
src/core/: Atom.cpp  Atom.h  CMakeLists.txt  Chain.cpp  Chain.h  Insulator.cpp  Insulator.h  Lead.cpp  Lead.h  TB.h  general.h  lib.cpp  lib.h  tb.i
src/gui/: PythonQtScriptingConsole.cpp  PythonQtScriptingConsole.h  gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portalwindow.cpp  portalwindow.h  portalwindow.ui  schema3layer.cpp  schema3layer.h  spec.cpp  spec.h  tbproject.cpp  tbproject.h  tbproject.ui
src/gui/res/: database.xml  database.xml~  res.qrc
src/unittest/: CMakeLists.txt  unittest.cpp
